package ubii.registration;
syntax = "proto3";

message RegistrationMessage {
    string device_identifier = 1;
    enum DeviceType {
        PARTICIPANT = 0;
        WATCHER = 1;
    }
    DeviceType device_type = 2 [default = PARTICIPANT];
}