package registration;
syntax = "proto3";

message registrationMessage {
    required string message_type = 1;
    required string device_identifier = 2; 
}